--- a/.github/workflows/voteflow_workflow.yml
+++ b/.github/workflows/voteflow_workflow.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build:
@@ -16,7 +17,8 @@ jobs:
           python-version: '3.x'
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          pip install -r requirements.txt
 
       - name: Run Data Processing Pipeline
         run: |
@@ -43,5 +45,3 @@ jobs:
       - name: Run Comparative Analysis
         run: |
           python comparison/comparative_analysis.py
-
-      # Add additional steps for deployment or other tasks
