--- a/.github/workflows/voteflow_workflow.yml
+++ b/.github/workflows/voteflow_workflow.yml
@@ -18,7 +18,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          pip install Flask==2.0.2
+          pip install pandas==1.3.3
+          pip install numpy==1.21.2
+          pip install scikit-learn==0.24.2
+          pip install Flask-Security==3.0.0
 
       - name: Run Data Processing Pipeline
         run: |
